--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-    <title>Art Class</title>
+    <title>Test Site 3</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
@@ -17,7 +17,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Art Class</h1>
+        <h1>Test Site 3</h1>
       </div>
 
       <p id="time"></p>
@@ -26,22 +26,22 @@
         <div class="navitem"><a selected href="/">Home</a></div>
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem"><a href="/emulator.html">Emulator</a></div>
+        <div class="navitem"><a href="/movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
 
     <div class="center-container">
-      <h1>Welcome to <span>Art Class</span></h1>
+      <h1>Welcome to <span>TS3</span></h1>
       <br />
-      <button onclick="window.location.href='/search.html?q=https://discord.gg/tMaHQ2dyk5'" class="button play">Join our Discord</button>
+      <button onclick="window.location.href='/search.html?q=https://discord.gg/'" class="button play">Join our Discord (coming soon)</button>
       <button onclick="launchab()" id="launchab" class="button play">Launch in about:blank</button>
     </div>
 
     <div class="links">
       <div class="left">
-        <a href="https://github.com/art-class/v4">GitHub</a>
-        <a href="https://discord.gg/tMaHQ2dyk5">Discord</a>
+        <a href="https://github.com/alsowo/ts3">GitHub</a>
+        <a href=""></a>
       </div>
 
       <div class="right">
