--- a/public/settings.html
+++ b/public/settings.html
@@ -77,7 +77,7 @@
         <option value="forest">Forest</option>
         <option value="ocean">Ocean</option>
         <option value="amoled">AMOLED</option>
-        <option value="white">MY EYES</option>
+        <option value="artclass">Art Class</option>
         <option value="sunset">Sunset</option>
         <option value="flash">Flash Bang</option>
         <option value="matrix">Matrix</option>
