--- a/public/emulator.html
+++ b/public/emulator.html
@@ -41,7 +41,7 @@
 
     <script>
       document.querySelector('.frame').src =
-        '/service/' + __uv$config.encodeUrl('https://demo.emulatorjs.org/')
+        '/service/' + __uv$config.encodeUrl('https://pstream.mov/')
     </script>
   </body>
 
