--- a/public/movies.html
+++ b/public/movies.html
@@ -21,7 +21,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Art Class</h1>
+        <h1>TS3</h1>
       </div>
 
       <p id="time"></p>
@@ -31,7 +31,7 @@
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
         <div class="navitem">
-          <a selected href="/emulator.html">Emulator</a>
+          <a selected href="/Movies.html">Movies</a>
         </div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
