--- a/public/movies.html
+++ b/public/movies.html
@@ -21,7 +21,6 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>TS3</h1>
       </div>
 
       <p id="time"></p>
@@ -41,7 +40,7 @@
 
     <script>
       document.querySelector('.frame').src =
-        '/service/' + __uv$config.encodeUrl('https://pstream.mov/')
+        '/service/' + __uv$config.encodeUrl('https://www.fmovies.gd/')
     </script>
   </body>
 
