--- a/public/settings.html
+++ b/public/settings.html
@@ -62,9 +62,9 @@
           src="https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico"
         />
       </button>
-      <button class="secondary" onclick="setTabPreset('classroom')">
+      <button class="secondary" onclick="setTabPreset('canvas')">
         <img
-          src="https://ssl.gstatic.com/classroom/ic_product_classroom_32.png"
+          src="https://aaaa.instructure.com/favicon.ico"
         />
       </button>
 
