--- a/public/about.html
+++ b/public/about.html
@@ -30,11 +30,11 @@
       </div>
     </nav>
     <div class="center-container">
-      <h1>Art Class</h1>
+      <h1>TS3</h1>
       <p id="splash">
-        Welcome to Art Class, the ultimate unblocked game site! Our site is
-        created by the Art Class Team, to bring you the best unblocking
-        experience. Whether you're at school or work, Art Class has got you
+        Welcome to TS3, the ultimate art class rip! this site is
+        90% created by the Art Class Team, to bring you the best unblocking
+        experience. Whether you're at school or work, TS3 has got you
         covered. So, sit back, relax, and enjoy our collection of games and
         apps!
       </p>
