--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Test Site 3</h1>
       </div>
 
       <p id="time"></p>
@@ -34,14 +33,14 @@
     <div class="center-container">
       <h1>Welcome to <span>TS3</span></h1>
       <br />
-      <button onclick="window.location.href='/search.html?q=https://discord.gg/'" class="button play">Join our Discord (coming soon)</button>
+      <button onclick="window.location.href='/'" class="button play">Placeholder</button>
       <button onclick="launchab()" id="launchab" class="button play">Launch in about:blank</button>
     </div>
 
     <div class="links">
       <div class="left">
         <a href="https://github.com/alsowo/ts3">GitHub</a>
-        <a href=""></a>
+        <a href="">placeholder</a>
       </div>
 
       <div class="right">
