--- a/public/load.html
+++ b/public/load.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-  <title>Art Class</title>
+  <title>TS#</title>
 
   <link rel="stylesheet" href="./css/master.css" />
 
@@ -18,7 +18,6 @@
   <nav>
     <div class="logo">
       <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-      <h1>Art Class</h1>
     </div>
 
     <p id="time"></p>
@@ -28,7 +27,7 @@
       <div class="navitem"><a href="/gs.html">Games</a></div>
       <div class="navitem"><a href="/apps.html">Apps</a></div>
       <div class="navitem"><a href="/emulator.html">Emulator</a></div>
-      <div class="navitem"><a href="/search.html">Search</a></div>
+      <div class="navitem"><a href="/search.html">Placeholder</a></div>
     </div>
   </nav>
 
