--- a/public/settings.html
+++ b/public/settings.html
@@ -84,7 +84,7 @@
         <option value="beach">Beach</option>
         <option value="murica">Murica'</option>
         <option value="modern">Modern</option>
-        <option value="space">Space</option>
+        <option value="galaxy">Space</option>
 
         <!-- add more options for other themes -->
       </select>
