--- a/public/settings.html
+++ b/public/settings.html
@@ -21,7 +21,6 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Art Class</h1>
       </div>
 
       <p id="time"></p>
@@ -30,7 +29,7 @@
         <div class="navitem"><a href="/">Home</a></div>
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem"><a href="/emulator.html">Emulator</a></div>
+        <div class="navitem"><a href="/movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
