--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-    <title>Test Site 3</title>
+    <title>TS3</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
@@ -40,7 +40,7 @@
     <div class="links">
       <div class="left">
         <a href="https://github.com/alsowo/ts3">GitHub</a>
-        <a href="">placeholder</a>
+        <a href="">Build: 0.0.2-Beta</a>
       </div>
 
       <div class="right">
