--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <div class="links">
       <div class="left">
         <a href="https://github.com/alsowo/ts3">GitHub</a>
-        <a href="">Build: 0.0.2-Beta</a>
+        <a href="">Version: 0.0.2-Beta</a>
       </div>
 
       <div class="right">
