--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-    <title>TS3</title>
+    <title>Woodshop</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
@@ -31,17 +31,17 @@
     </nav>
 
     <div class="center-container">
-      <h1>Welcome to <span>TS3</span></h1>
+      <h1>Welcome to <span>Woodshop</span></h1>
       <p id="splash"></p>
       <br />
-      <button onclick="window.location.href='/'" class="button play">Placeholder</button>
+      <button onclick="window.location.href='/about.html'" class="button play">Build: 0.0.3 PB</button>
       <button onclick="launchab()" id="launchab" class="button play">Launch in about:blank</button>
     </div>
 
     <div class="links">
       <div class="left">
         <a href="https://github.com/alsowo/ts3">GitHub</a>
-        <a href="">Version: 0.0.2-Beta</a>
+        <a href="">placeholder</a>
       </div>
 
       <div class="right">
