--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-    <title>Woodshop</title>
+    <title>Mynt</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="center-container">
-      <h1>Welcome to <span>Woodshop</span></h1>
+      <h1>Welcome to <span>Mynt</span></h1>
       <p id="splash"></p>
       <br />
       <button onclick="window.location.href='/about.html'" class="button play">Build: 0.0.3 PB</button>
