--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
       href="./assets/images/icon.png"
       type="image/png"
     />
-    <title>Art Class</title>
+    <title>Mynt</title>
     <link rel="stylesheet" href="./css/master.css" />
     <script src="/uv/uv.bundle.js" charset="UTF-8"></script>
     <script src="/uv/uv.config.js"></script>
@@ -29,11 +29,11 @@
       </div>
     </nav>
     <div class="center-container">
-      <h1>TS3</h1>
+      <h1>Mynt</h1>
       <p id="splash">
-        Welcome to TS3, the ultimate art class rip! this site is
+        Welcome to Mynt, the ultimate art class rip! this site is
         90% created by the Art Class Team, to bring you the best unblocking
-        experience. Whether you're at school or work, TS3 has got you
+        experience. Whether you're at school or work, Mynt has got you
         covered. So, sit back, relax, and enjoy our collection of games and
         apps!
       </p>
