--- a/public/load.html
+++ b/public/load.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-  <title>TS#</title>
+  <title>Mynt</title>
 
   <link rel="stylesheet" href="./css/master.css" />
 
