--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
       href="./assets/images/icon.png"
       type="image/png"
     />
-    <title>Art Class</title>
+    <title>Mynt</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
@@ -19,7 +19,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Art Class</h1>
+        <h1>Mynt</h1>
       </div>
 
       <p id="time"></p>
@@ -28,7 +28,7 @@
         <div class="navitem"><a href="/">Home</a></div>
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem"><a href="/emulator.html">Emulator</a></div>
+        <div class="navitem"><a href="/movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
@@ -39,7 +39,7 @@
       <br />
       <p>
         In the event that isn't supposed to happen, <br />you can report it in
-        our <a href="https://discord.gg/desmos">Discord server.</a>
+        our <a href="https://discord.gg/">Discord server (coming soon).</a>
       </p>
       <br />
       <button onclick="window.location.href='/index.html'" class="button play">
