--- a/public/gs.html
+++ b/public/gs.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/png" />
-    <title>Art Class</title>
+    <title>Mynt</title>
 
     <link rel="stylesheet" href="./css/master.css" />
     <script src="/uv/uv.bundle.js" charset="UTF-8"></script>
@@ -16,7 +16,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
-        <h1>Art Class</h1>
+        <h1>Mynt</h1>
       </div>
 
       <p id="time"></p>
@@ -25,12 +25,12 @@
         <div class="navitem"><a href="/">Home</a></div>
         <div class="navitem"><a selected href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem"><a href="/emulator.html">Emulator</a></div>
+        <div class="navitem"><a href="/Movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
 
-    <h1>Games</h1>
+    <h1>Games (deleting all soon)</h1>
     <input type="text" class="input" id="search" placeholder="Search Games" style="text-align: center" />
 
     <div class="cardgroup" id="favoritedgames"></div>
