--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
     <div class="center-container">
       <iframe src="https://free.timeanddate.com/clock/ia3p84nc/n179/fs20/tct/pct/ftb/tt0/tw1/tm2/th1/tb2" frameborder="0" width="241" height="26" allowtransparency="true"></iframe>
+    <div class="iframe-overlay"></div>
       <h1>Welcome to <span>Mynt</span></h1>
       <p id="splash"></p>
       <br />
