--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       <p id="time"></p>
 
       <div class="navitems">
+        <iframe src="https://battery-level-indicator-psi.vercel.app/" frameborder="0" width="202" height="57" allowtransparency="true"></iframe>
         <div class="navitem"><a selected href="/">Home</a></div>
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
