--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
   if ('getBattery' in navigator) {
     navigator.getBattery().then((battery) => {
       const { level, charging } = battery;
-      const status = charging ? 'charging' : 'not charging';
+      const status = charging ? 'charging' : 'Battery is at';
       const percent = `${Math.round(level * 100)}%`;
-      const message = `The battery is ${status} and the current level is ${percent}`;
+      const message = `${status} ${percent}`;
       document.getElementById('batteryStatus').textContent = message;
     });
   }
