--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <h1>Welcome to <span>Mynt</span></h1>
       <p id="splash"></p>
       <br />
-      <button onclick="window.location.href='/about.html'" class="button play">Build: 0.0.3 PB</button>
+      <button onclick="window.location.href='/log.html'" class="button play">0.0.3 PB</button>
       <button onclick="launchab()" id="launchab" class="button play">Launch in about:blank</button>
       <br />
       <br />
@@ -58,7 +58,7 @@
     <div class="links">
       <div class="left">
         <a href="https://github.com/alsowo/ts3">GitHub</a>
-        <a href="">placeholder</a>
+        <a href="./log.html">Update Log</a>
       </div>
 
       <div class="right">
