--- a/public/gs.html
+++ b/public/gs.html
@@ -30,7 +30,7 @@
       </div>
     </nav>
 
-    <h1>Games (deleting all soon)</h1>
+    <h1>Games (Adding more soon)</h1>
     <input type="text" class="input" id="search" placeholder="Search Games" style="text-align: center" />
 
     <div class="cardgroup" id="favoritedgames"></div>
