--- a/public/settings.html
+++ b/public/settings.html
@@ -21,6 +21,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
+        <h1>Mynt</h1>
       </div>
 
       <p id="time"></p>
@@ -84,6 +85,7 @@
         <option value="murica">Murica'</option>
         <option value="modern">Modern</option>
         <option value="galaxy">Space</option>
+        <option value="spooky">ITS SPOOKY MONTH</option>
 
         <!-- add more options for other themes -->
       </select>
