--- a/public/gs.html
+++ b/public/gs.html
@@ -25,7 +25,7 @@
         <div class="navitem"><a href="/">Home</a></div>
         <div class="navitem"><a selected href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem"><a href="/movies.html">Movies</a></div>
+        <div class="navitem"><a href="/Movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
