--- a/public/about.html
+++ b/public/about.html
@@ -18,6 +18,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
+        <h1>Mynt</h1>
       </div>
       <p id="time"></p>
       <div class="navitems">
