--- a/public/apps.html
+++ b/public/apps.html
@@ -26,7 +26,7 @@
       <div class="navitem"><a href="/">Home</a></div>
       <div class="navitem"><a href="/gs.html">Games</a></div>
       <div class="navitem"><a selected href="/apps.html">Apps</a></div>
-      <div class="navitem"><a href="/emulator.html">Emulator</a></div>
+      <div class="navitem"><a href="/movies.html">Movies</a></div>
       <div class="navitem"><a href="/search.html">Search</a></div>
     </div>
   </nav>
