--- a/public/load.html
+++ b/public/load.html
@@ -18,6 +18,7 @@
   <nav>
     <div class="logo">
       <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
+      <h1>Mynt</h1>
     </div>
 
     <p id="time"></p>
@@ -26,8 +27,8 @@
       <div class="navitem"><a href="/">Home</a></div>
       <div class="navitem"><a href="/gs.html">Games</a></div>
       <div class="navitem"><a href="/apps.html">Apps</a></div>
-      <div class="navitem"><a href="/emulator.html">Emulator</a></div>
-      <div class="navitem"><a href="/search.html">Placeholder</a></div>
+      <div class="navitem"><a href="/movies.html">Movies</a></div>
+      <div class="navitem"><a href="/search.html">Search</a></div>
     </div>
   </nav>
 
