--- a/public/movies.html
+++ b/public/movies.html
@@ -29,9 +29,7 @@
         <div class="navitem"><a href="/">Home</a></div>
         <div class="navitem"><a href="/gs.html">Games</a></div>
         <div class="navitem"><a href="/apps.html">Apps</a></div>
-        <div class="navitem">
-          <a selected href="/Movies.html">Movies</a>
-        </div>
+        <div class="navitem"><a selected href="/movies.html">Movies</a></div>
         <div class="navitem"><a href="/search.html">Search</a></div>
       </div>
     </nav>
