--- a/public/search.html
+++ b/public/search.html
@@ -17,6 +17,7 @@
   <nav>
     <div class="logo">
       <img src="./assets/images/icon.png" alt="Logo" draggable="false" />
+      <h1>Mynt</h1>
     </div>
 
     <p id="time"></p>
@@ -25,7 +26,7 @@
       <div class="navitem"><a href="/index.html">Home</a></div>
       <div class="navitem"><a href="/gs.html">Games</a></div>
       <div class="navitem"><a href="/apps.html">Apps</a></div>
-      <div class="navitem"><a href="/Movies.html">Moviesr</a></div>
+      <div class="navitem"><a href="/movies.html">Movies</a></div>
       <div class="navitem"><a selected href="/search.html">Search</a></div>
     </div>
   </nav>
