--- a/public/settings.html
+++ b/public/settings.html
@@ -73,11 +73,12 @@
       <h2>Themes</h2>
       <select id="theme-select">
         <option value="main">Default</option>
+        <option value="interstellar">Interstellar</option>
+        <option value="artclass">Art Class</option>
         <option value="lgbtq">LGBTQIA+</option>
         <option value="forest">Forest</option>
         <option value="ocean">Ocean</option>
         <option value="amoled">AMOLED</option>
-        <option value="artclass">Art Class</option>
         <option value="sunset">Sunset</option>
         <option value="flash">Flash Bang</option>
         <option value="matrix">Matrix</option>
