--- a/public/log.html
+++ b/public/log.html
@@ -30,15 +30,16 @@
       </div>
     </nav>
     <div class="center-container">
-      <h1>Mynt 0.0.3 PB</h1>
+      <h1>Mynt 0.1.0 PB</h1>
       <p id="splash">
-        - added Time indicator
-        - added Battery indicator
-        - Rebranded to Mynt
-        - added Space and Artclass themes
-        - Fixed some icons
-        - Deleted whole games list (replacing soon!)
-        - Beta Test Release
+        - changed default theme to mint blue rather than mint green
+        - added more splash texts
+        - added request forms
+        - possible discord soon if this gets big enough
+        - fixed some icons
+        - added some games
+        - bug fixes
+        - increased version number :D
       </p>
       <br />
       <button onclick="window.location.href='/index.html'" class="button play">
