--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <div class="links">
       <div class="left">
-        <a href="https://github.com/alsowo/ts3">GitHub</a>
+        <a href="https://github.com/alsowo/mynt">GitHub</a>
         <a href="./log.html">Update Log</a>
       </div>
 
