--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <p id="splash"></p>
       <br />
       <button onclick="window.location.href='/log.html'" class="button play">0.1.0 PB</button>
-      <button onclick="launchab()" id="launchab" class="button play">Launch in about:blank</button>
+      <button onclick="launchab()" id="launchab" class="button play">Launch in data:text</button>
       <br />
       <br />
 <span id="batteryStatus"></span>
