--- a/public/about.html
+++ b/public/about.html
@@ -36,7 +36,7 @@
         90% created by the Art Class Team, to bring you the best unblocking
         experience. Whether you're at school or work, Mynt has got you
         covered. So, sit back, relax, and enjoy our collection of games and
-        apps! FYI: save this for if it ever gets blocked (data:text/data:text/html;,<embed type="text/plain" width="100%" height="100%" src="https://www.mynt.mom">">)
+        apps!
       </p>
       <br />
       <button onclick="window.location.href='/index.html'" class="button play">
