--- a/public/log.html
+++ b/public/log.html
@@ -30,15 +30,16 @@
       </div>
     </nav>
     <div class="center-container">
-      <h1>Mynt 0.1.0 PB</h1>
+      <h1>Mynt 0.1.1 PB</h1>
       <p id="splash">
         - changed default theme to mint blue rather than mint green
         - added more splash texts
-        - added request forms
+        - added suggestion form
         - possible discord soon if this gets big enough
         - fixed some icons
         - added some games
         - bug fixes
+        - attempted to replace about:blank with data:text (will fix soon!)
         - increased version number :D
       </p>
       <br />
