--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <p id="splash"></p>
       <br />
       <button onclick="window.location.href='/log.html'" class="button play">0.1.0 PB</button>
-      <button onclick="window.location.href='data:text/html;,<embed width=100% height=100% src=https://www.mynt.mom>/embed>'" class="button play">Launch in data:text</button>
+      <button onclick="launchdata()" class="button play">Launch in data:text</button>
       <br />
       <br />
 <span id="batteryStatus"></span>
