--- a/public/log.html
+++ b/public/log.html
@@ -30,17 +30,11 @@
       </div>
     </nav>
     <div class="center-container">
-      <h1>Mynt 0.1.1 PB</h1>
+      <h1>Mynt 0.1.2 PB</h1>
       <p id="splash">
-        - changed default theme to mint blue rather than mint green
-        - added more splash texts
-        - added suggestion form
-        - possible discord soon if this gets big enough
-        - fixed some icons
-        - added some games
-        - bug fixes
-        - attempted to replace about:blank with data:text (will fix soon!)
-        - increased version number :D
+        - this is small update lol
+        - replaced data:text with blob so it actually works
+        - added new themes
       </p>
       <br />
       <button onclick="window.location.href='/index.html'" class="button play">
