--- a/public/settings.html
+++ b/public/settings.html
@@ -87,6 +87,7 @@
         <option value="modern">Modern</option>
         <option value="galaxy">Space</option>
         <option value="spooky">ITS SPOOKY MONTH</option>
+        <option value="weather">Weathergirl</option>
 
         <!-- add more options for other themes -->
       </select>
