--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <button onclick="launchdata()" class="button play">Launch in Blob</button>
       <br />
       <br />
-<h1 id="batteryStatus"></h1>
+<p id="batteryStatus"></p>
 
 <script>
   if ('getBattery' in navigator) {
