--- a/public/log.html
+++ b/public/log.html
@@ -34,7 +34,8 @@
       <p id="splash">
         - this is small update lol
         - replaced data:text with blob so it actually works
-        - added new themes
+        - added weathergirl theme
+        - fixed spooky month theme
       </p>
       <br />
       <button onclick="window.location.href='/index.html'" class="button play">
