--- a/public/settings.html
+++ b/public/settings.html
@@ -6,7 +6,7 @@
       href="./assets/images/icon.png"
       type="image/png"
     />
-    <title>Art Class</title>
+    <title>Mynt</title>
 
     <link rel="stylesheet" href="./css/master.css" />
 
